--- a/index.html
+++ b/index.html
@@ -8,9 +8,35 @@
   </head>
   <body>
     <h1>World Clock</h1>
-    <footer>
-      Coded by <a href="#" target="_blank">Chiara</a> /
-      <a href="/" target="_blank">Open sourced</a>
+    <!-- <h2>Local time</h2> -->
+    <div class="container">
+      <select>
+        <option value="">Select a city</option>
+        <option value="">Sydney</option>
+        <option value="">Tokyo</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        </option>
+      </select>
+
+      <div class="city">
+        <h2>Los Angeles</h2>
+        <div class="date">#</div>
+        <div class="time">#</div>
+        <h2>Sydney</h2>
+        <div class="date">#</div>
+        <div class="time">#</div>
+        <h2>Tokyo</h2>
+        <div class="date">#</div>
+        <div class="time">#</div>
+        <h2>Paris</h2>
+        <div class="date">#</div>
+        <div class="time">#</div>
+      </div>
+    </div>
+      <footer>
+      Coded by <a href="https://filesbychiara.netlify.app/" target="_blank">Chiara</a> /
+      <a href="https://github.com/filesbychiara/world-clock" target="_blank">Open sourced</a>
     </footer>
     <script src="/src/app.js"></script>
   </body>
