--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
       </select>
 
       <div class="city">
-        <h2>Los Angeles</h2>
-        <div class="date">#</div>
-        <div class="time">#</div>
-        <h2>Sydney</h2>
+        <div>
+          <h2>Los Angeles</h2>
+          <div class="date">#</div>
+        </div>
+        <div class="time"># <small>AM</small></div>
+        <!-- <h2>Sydney</h2>
         <div class="date">#</div>
         <div class="time">#</div>
         <h2>Tokyo</h2>
@@ -31,7 +33,7 @@
         <div class="time">#</div>
         <h2>Paris</h2>
         <div class="date">#</div>
-        <div class="time">#</div>
+        <div class="time">#</div> -->
       </div>
     </div>
       <footer>
