--- a/index.html
+++ b/index.html
@@ -12,39 +12,50 @@
     <h1>World Clock</h1>
     <!-- <h2>Local time</h2> -->
     <div class="container">
-      <select>
+      <select id="city">
         <option value="">Select a city</option>
-        <option value="">Sydney</option>
-        <option value="">Tokyo</option>
-        <option value="">London</option>
-        <option value="">New York</option>
+        <option value="Pacific/Auckland">Aukland</option>
+        <option value="America/Los_Angeles">Los Angeles</option>
+        <option value="Asia/Singapore">Singapore</option>
         </option>
       </select>
 
-      <div class="city" id="los-angeles">
+    <div id="cities">
+
+      <div class="city" id="sydney">
         <div>
-          <h2>Los Angeles</h2>
+          <h2>Sydney</h2>
           <div class="date"></div>
         </div>
         <div class="time"></div>
-        </div>
-
-        <div class="city" id="sydney">
-          <div>
-            <h2>Sydney</h2>
-            <div class="date"></div>
-          </div>
-          <div class="time"></div>
-          </div>
-
-          
-        <!-- <h2>Tokyo</h2>
-        <div class="date">#</div>
-        <div class="time">#</div>
-        <h2>Paris</h2>
-        <div class="date">#</div>
-        <div class="time">#</div> -->
       </div>
+
+      <div class="city" id="tokyo">
+        <div>
+          <h2>Tokyo</h2>
+          <div class="date"></div>
+        </div>
+        <div class="time"></div>
+      </div>
+
+      <div class="city" id="london">
+        <div>
+          <h2>London</h2>
+          <div class="date"></div>
+        </div>
+        <div class="time"></div>
+      </div>
+
+      <div class="city" id="new-york">
+        <div>
+          <h2>New York</h2>
+          <div class="date"></div>
+        </div>
+        <div class="time"></div>
+      </div>
+      </div>
+    </div>
+
       <footer>
       Coded by <a href="https://filesbychiara.netlify.app/" target="_blank">Chiara</a> /
       <a href="https://github.com/filesbychiara/world-clock" target="_blank">Open sourced</a>
