Added current location

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   </head>
   <body>
     <h1>World Clock</h1>
-    <!-- <h2>Local time</h2> -->
     <div class="container">
       <select id="city">
         <option value="">Select a city</option>
+        <option value="current">Current Location</option>
         <option value="Pacific/Auckland">Aukland</option>
         <option value="America/Los_Angeles">Los Angeles</option>
         <option value="Asia/Singapore">Singapore</option>
