--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>World Clock - Chiara</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <h1><a href="/">World Clock</a></h1>
     <div class="container">
       <select id="city">
-        <option value="">Select a city</option>
+        <option value="">Select a city...</option>
         <option value="current">Current Location</option>
         <option value="Pacific/Auckland">Aukland</option>
         <option value="America/Los_Angeles">Los Angeles</option>
